Elementos Únicos y sus Conteos: Copias y Vistas

--- a/clase07.ipynb
+++ b/clase07.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMp6HGSowJASjecPY0EiIg8",
+      "authorship_tag": "ABX9TyOmamoK9aKSt8joFKDSR+iH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e8c8a886-39a0-41cb-ea2c-3fe3eacde35e",
+        "outputId": "f1bd4fd1-c967-45dd-a903-71f9d8974811",
         "id": "RGoQUN72X9Nr"
       },
       "outputs": [
@@ -55,71 +55,7 @@
         "                             \"bueno\", \"bueno\", \"malo\",\n",
         "                             \"excelente\", \"excelente\", \"excelente\"])\n",
         "\n",
-        "print(np.unique(survey_responses))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e8c8a886-39a0-41cb-ea2c-3fe3eacde35e",
-        "id": "tdtw3Q10X-aI"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['bueno' 'excelente' 'malo']\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Elementos Únicos y sus Conteos: Copias y Vistas\n",
-        "\n",
-        "import numpy as np\n",
-        "\n",
-        "survey_responses = np.array([\"bueno\", \"excelente\", \"malo\",\n",
-        "                             \"bueno\", \"malo\", \"excelente\",\n",
-        "                             \"bueno\", \"bueno\", \"malo\",\n",
-        "                             \"excelente\", \"excelente\", \"excelente\"])\n",
-        "\n",
-        "print(np.unique(survey_responses))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qQjALDx3Ml95",
-        "outputId": "e8c8a886-39a0-41cb-ea2c-3fe3eacde35e"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['bueno' 'excelente' 'malo']\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Elementos Únicos y sus Conteos: Copias y Vistas\n",
-        "\n",
-        "import numpy as np\n",
-        "\n",
-        "survey_responses = np.array([\"bueno\", \"excelente\", \"malo\",\n",
-        "                             \"bueno\", \"malo\", \"excelente\",\n",
-        "                             \"bueno\", \"bueno\", \"malo\",\n",
-        "                             \"excelente\", \"excelente\", \"excelente\"])\n",
-        "\n",
-        "print(np.unique(survey_responses))"
+        "print(np.unique(survey_responses))\n"
       ]
     },
     {
@@ -127,23 +63,61 @@
       "source": [
         "unique_elements, counts = np.unique(survey_responses, return_counts=True)\n",
         "print(unique_elements)\n",
-        "print(counts)"
+        "print(counts)\n",
+        "\n",
+        "print(\"\\nCréditos a Rodolfo Turpo R. - https://platzi.com/comentario/5194168/\")\n",
+        "counts_dict = dict(zip(survey_responses,counts))\n",
+        "print(counts_dict)\n",
+        "\n",
+        "print(\"\\n quería imprimir algo asi como en este ejemplo https://es.stackoverflow.com/questions/438163/python-imprimir-un-diccionario-en-columnas\")\n",
+        "for valor in counts_dict:\n",
+        "  print(f\"{valor[0:9]:<15} {valor[0:9]}\")\n",
+        "for valor in counts_dict:\n",
+        "  print(f\"{valor[0:9]:<15} {counts_dict.values()}\")\n",
+        "for clave in counts_dict:\n",
+        "  print(clave)\n",
+        "for valor in counts:\n",
+        "  print(valor)\n",
+        "\n",
+        "print(\"\\nhttps://github.com/iecgerman/10002-python/blob/master/clase14.py\")\n",
+        "pares = counts_dict.items()\n",
+        "print(pares)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lRb2nmlmNw5s",
-        "outputId": "024296b5-3eaa-4f86-820a-53ff04739076"
+        "outputId": "ab08c0fa-8495-44cc-f1e8-dbb3e9440645"
       },
-      "execution_count": 12,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "['bueno' 'excelente' 'malo']\n",
-            "[4 5 3]\n"
+            "[4 5 3]\n",
+            "\n",
+            "Créditos a Rodolfo Turpo R. - https://platzi.com/comentario/5194168/\n",
+            "{'bueno': 4, 'excelente': 5, 'malo': 3}\n",
+            "\n",
+            " quería imprimir algo asi como en este ejemplo https://es.stackoverflow.com/questions/438163/python-imprimir-un-diccionario-en-columnas\n",
+            "bueno           bueno\n",
+            "excelente       excelente\n",
+            "malo            malo\n",
+            "bueno           dict_values([4, 5, 3])\n",
+            "excelente       dict_values([4, 5, 3])\n",
+            "malo            dict_values([4, 5, 3])\n",
+            "bueno\n",
+            "excelente\n",
+            "malo\n",
+            "4\n",
+            "5\n",
+            "3\n",
+            "\n",
+            "https://github.com/iecgerman/10002-python/blob/master/clase14.py\n",
+            "dict_items([('bueno', 4), ('excelente', 5), ('malo', 3)])\n"
           ]
         }
       ]
@@ -169,36 +143,40 @@
         "\n",
         "unique_elements_in_prices, counts = np.unique(prices, return_counts=True)\n",
         "print(unique_elements_in_prices)\n",
-        "print(counts)"
+        "print(counts)\n",
+        "\n",
+        "counts_dict_zip = dict(zip(unique_elements_in_prices, counts))\n",
+        "print(counts_dict_zip)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-MbGHCvZQv_c",
-        "outputId": "33ffd95a-3658-4936-e009-3210b61c0779"
+        "outputId": "90d114f2-c6ae-41af-f5b1-8067d4288f8b"
       },
-      "execution_count": 15,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[86 98 61  8 28 74 92 83 17  6]\n",
-            " [43 40 61 23 46 39 77 95 69 60]\n",
-            " [77 89 30 49 16 82 24 96 88 20]\n",
-            " [79 27  5 17 24 19  6 90 26 14]\n",
-            " [48 90 62 37  1 82 81 17  4 18]\n",
-            " [21 83 40  5 47 47  4  7 44 70]\n",
-            " [62 41 61 94 85 59 87 57 74 79]\n",
-            " [68 60  3 90 50 45 93 73 60  4]\n",
-            " [60 83  6 50 45 76 97 51 48 58]\n",
-            " [ 8 69 49 27  5 25 17 38 56 12]]\n",
-            "[ 1  3  4  5  6  7  8 12 14 16 17 18 19 20 21 23 24 25 26 27 28 30 37 38\n",
-            " 39 40 41 43 44 45 46 47 48 49 50 51 56 57 58 59 60 61 62 68 69 70 73 74\n",
-            " 76 77 79 81 82 83 85 86 87 88 89 90 92 93 94 95 96 97 98]\n",
-            "[1 1 3 3 3 1 2 1 1 1 4 1 1 1 1 1 2 1 1 2 1 1 1 1 1 2 1 1 1 2 1 2 2 2 2 1 1\n",
-            " 1 1 1 4 3 2 1 2 1 1 2 1 2 2 1 2 3 1 1 1 1 1 3 1 1 1 1 1 1 1]\n"
+            "[[80 12 65 13 83 52 64 51 30 57]\n",
+            " [ 3  1 41 39 38 47 15  9 70 52]\n",
+            " [82 74 80 81 44 80 65 24 53 89]\n",
+            " [59 79 57 60 84 64 44 57  1 36]\n",
+            " [71 60 71 28 74  3 87 90 50 62]\n",
+            " [35 58  3 67 85 40 58 77 78 33]\n",
+            " [19 90 42 41 60 78 18 36 56 30]\n",
+            " [81 74 88 20 61 61 62 94 60 97]\n",
+            " [65 35 63 58 28  1  3 93 85 62]\n",
+            " [47 32 87 42 90 56 34 50 35  4]]\n",
+            "[ 1  3  4  9 12 13 15 18 19 20 24 28 30 32 33 34 35 36 38 39 40 41 42 44\n",
+            " 47 50 51 52 53 56 57 58 59 60 61 62 63 64 65 67 70 71 74 77 78 79 80 81\n",
+            " 82 83 84 85 87 88 89 90 93 94 97]\n",
+            "[3 4 1 1 1 1 1 1 1 1 1 2 2 1 1 1 3 2 1 1 1 2 2 2 2 2 1 2 1 2 3 3 1 4 2 3 1\n",
+            " 2 3 1 1 2 3 1 2 1 3 2 1 1 1 2 2 1 1 3 1 1 1]\n",
+            "{1: 3, 3: 4, 4: 1, 9: 1, 12: 1, 13: 1, 15: 1, 18: 1, 19: 1, 20: 1, 24: 1, 28: 2, 30: 2, 32: 1, 33: 1, 34: 1, 35: 3, 36: 2, 38: 1, 39: 1, 40: 1, 41: 2, 42: 2, 44: 2, 47: 2, 50: 2, 51: 1, 52: 2, 53: 1, 56: 2, 57: 3, 58: 3, 59: 1, 60: 4, 61: 2, 62: 3, 63: 1, 64: 2, 65: 3, 67: 1, 70: 1, 71: 2, 74: 3, 77: 1, 78: 2, 79: 1, 80: 3, 81: 2, 82: 1, 83: 1, 84: 1, 85: 2, 87: 2, 88: 1, 89: 1, 90: 3, 93: 1, 94: 1, 97: 1}\n"
           ]
         }
       ]
@@ -224,7 +202,7 @@
         "id": "myYedN2MSv4N",
         "outputId": "f779a8b7-540e-4a13-e9d2-e6068fd6ae43"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,7 +236,7 @@
         "id": "sJu_NJFCUA7G",
         "outputId": "4a2f5df4-12ae-44f9-e61a-7614bc7d50f1"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
